--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -136,9 +136,9 @@
     class="fixed z-50 w-full h-12 max-w-lg -translate-x-1/2 bg-white border border-gray-200 rounded-full bottom-4 left-1/2 dark:bg-gray-700 dark:border-gray-600 sm:hidden">
     <div class="grid h-full max-w-lg grid-cols-5 mx-auto gap-x-4 items-center">
       <button data-tooltip-target="tooltip-home" type="button"
-        class="inline-flex flex-col items-center justify-center px-5 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 group">
-        <i class="fa-regular fa-folder-open text-gray-600 dark:text-gray-400 text-lg"></i>
-      </button>
+      class="inline-flex flex-col items-center justify-center px-5 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 group">
+      <a href="/wheel"><i class="fa-solid fa-dharmachakra  text-gray-600 dark:text-gray-400 text-2xl"></i></a>
+  </button>
 
       <button data-tooltip-target="tooltip-wallet" type="button"
         class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-100 dark:hover:bg-gray-800 group">
