--- a/views/wheel/index.ejs
+++ b/views/wheel/index.ejs
@@ -11,35 +11,30 @@
     <link rel="stylesheet" href="/css/loader.css">
     <link rel="stylesheet" href="/css/fancybox/fancybox.css" />
     <style>
+        body {
+            overflow: hidden;
+            margin: 0;
+        }
+
         canvas {
-            border: 10px solid #333;
+            border: 3px solid #333;
             border-radius: 50%;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            max-width: 90vw;
+            max-height: 90vh;
         }
 
         .pointer {
             position: absolute;
-            top: 250px;
-            right: -3px;
+            right: -20px;
+            top: 50%;
             width: 0;
             height: 0;
             border-left: 20px solid transparent;
             border-right: 20px solid transparent;
             border-bottom: 30px solid #ff0000;
             z-index: 10;
-            transform: rotate(270deg);
-        }
-        .details{
-            position: absolute;
-            z-index: 20;
-
-            /* top: 300px;
-            left: 20px;
-            background: white;
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            display: none; */
+            transform: translateY(-50%) rotate(270deg);
         }
     </style>
 </head>
@@ -153,19 +148,25 @@
 
     <div class="p-4 sm:ml-64 mt-14">
         <div class="grid">
-            <button class="mr-3 px-8 flex py-2 text-md text-white bg-green-500 rounded-md hover:bg-green-700 transition duration-300 ease-in-out details"><a href="/wheel-details">Details</a></button>
-            <div class="flex justify-center items-center m-0">
-                <div class="wheel-container relative flex flex-col items-center">
+            <div class="button-container flex justify-between">
+                <button
+                    class="py-1 h-12 w-24 text-md text-white bg-green-500 rounded-md hover:bg-green-700 transition duration-300 ease-in-out">
+                    <a href="/wheel-details">Details</a>
+                </button>
+                <button id="spinButton"
+                    class="py-1 h-12 w-24 text-md text-white bg-blue-500 rounded-md hover:bg-blue-700 transition duration-300 ease-in-out">
+                    Start
+                </button>
+            </div>
+            <div class="wheel-container flex justify-center items-center mt-64 relative">
+                <div class="wheel-wrapper absolute flex flex-col items-center">
                     <div class="pointer"></div>
                     <canvas id="wheel" width="500" height="500"></canvas>
-
-                        <button id="spinButton"
-                            class="mt-5 px-8 py-4 text-lg text-white bg-blue-500 rounded-md hover:bg-blue-700 transition duration-300 ease-in-out">Start</button>
-                        <!-- <div id="result" class="mt-5 text-xl font-bold text-gray-800"></div> -->
-                       
                 </div>
             </div>
         </div>
+
+
     </div>
 
 
@@ -175,7 +176,7 @@
         <div class="grid h-full max-w-lg grid-cols-5 mx-auto gap-x-4 items-center">
             <button data-tooltip-target="tooltip-home" type="button"
                 class="inline-flex flex-col items-center justify-center px-5 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 group">
-                <i class="fa-regular fa-folder-open text-gray-600 dark:text-gray-400 text-lg"></i>
+                <a href="/wheel"><i class="fa-solid fa-dharmachakra  text-gray-600 dark:text-gray-400 text-2xl"></i></a>
             </button>
 
             <button data-tooltip-target="tooltip-wallet" type="button"
