list js dictionary

--- a/views/dictionary/index.ejs
+++ b/views/dictionary/index.ejs
@@ -145,17 +145,17 @@
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                     <tr>
-                        <th scope="col" class="px-6 py-3">
+                        <th scope="col" class="px-3 py-3">
                             No.
                         </th>
                         <th scope="col" class="px-6 py-3">
-                            Topic
+                            Eng
                         </th>
                         <th scope="col" class="px-6 py-3">
-                            User Name
+                            Aze
                         </th>
                         <th scope="col" class="px-6 py-3">
-                            Date
+                            Description
                         </th>
                         <th scope="col" class="px-6 py-3">
                             Action
@@ -176,7 +176,7 @@
 
 
     <script src="/js/pages/home/index.js"></script>
-    <script src="/js/pages/wheel/details.js"></script>
+    <script src="/js/pages/dictionary/index.js"></script>
     <script src="/js/helpers/sweetalert2.all.min.js"></script>
 </body>
 
