made simple dictionary

--- a/views/dictionary/index.ejs
+++ b/views/dictionary/index.ejs
@@ -133,13 +133,28 @@
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
             <div class="flex flex-column sm:flex-row flex-wrap space-y-4 sm:space-y-0 items-center gap-2 pb-4">
                 <div class="relative">
-                    <input type="text" id="topic-data"
-                        class="block p-2 ps-10 text-sm text-black border border-gray-300 rounded-lg w-80 bg-gray-50"
-                        placeholder="Write Something">
+                    <div class="flex gap-4">
+                        <div class="flex-1">
+                            <input type="text"  id="foreign-word"
+                                class="block p-1 sm:p-2 ps-2 sm:ps-10 text-xs sm:text-sm text-black border border-gray-300 rounded-lg w-full sm:w-80 bg-gray-50"
+                                placeholder="Write Something">
+                        </div>
+                        <div class="flex-1">
+                            <input type="text" id="translated-word"
+                                class="block p-1 sm:p-2 ps-2 sm:ps-10 text-xs sm:text-sm text-black border border-gray-300 rounded-lg w-full sm:w-80 bg-gray-50"
+                                placeholder="Write Something">
+                        </div>
+                        <div class="flex-1">
+                            <textarea  id="description"
+                                class="block p-1 sm:p-2 ps-2 sm:ps-10 text-xs sm:text-sm text-black border border-gray-300 rounded-lg w-full sm:w-80 bg-gray-50"
+                                placeholder="Write Something"></textarea>
+                        </div>
+                    </div>
                 </div>
+                
                 <div>
                     <button
-                        class="mr-3 px-8 flex py-1.5 text-md text-white bg-green-500 border border-gray-300 rounded-lg hover:bg-green-700 transition duration-300 ease-in-out details" id="add-topic">Add</button>
+                        class="mr-3 px-8 flex py-1.5 text-md text-white bg-green-500 border border-gray-300 rounded-lg hover:bg-green-700 transition duration-300 ease-in-out details" id="add-word">Add</button>
                 </div>
             </div>
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
