--- a/views/dictionary/index.ejs
+++ b/views/dictionary/index.ejs
@@ -130,7 +130,7 @@
 
     <div class="p-4 sm:ml-64 mt-14">
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-            <div class="flex flex-col sm:flex-row sm:flex-wrap space-y-4 sm:space-y-0 sm:gap-4 items-center pb-4">
+            <!-- <div class="flex flex-col sm:flex-row sm:flex-wrap space-y-4 sm:space-y-0 sm:gap-4 items-center pb-4">
                 <div class="flex flex-col sm:flex-row w-full gap-2">
                     <input type="text" id="foreign-word"
                         class="block p-2 text-xs sm:text-sm text-black border border-gray-300 rounded-lg w-full sm:w-80 bg-gray-50"
@@ -145,7 +145,23 @@
                 <button
                     class="w-full sm:w-auto px-8 py-2 text-sm sm:text-md text-white bg-green-500 border border-gray-300 rounded-lg hover:bg-green-700 transition duration-300 ease-in-out"
                     id="add-word">Add</button>
+            </div> -->           
+            
+            <div class="flex flex-wrap items-center bg-gray-100 text-black">
+                <div class="flex-1 px-1 py-1 text-sm sm:text-base sm:mb-0">
+                    <input type="text" id="foreign-word" placeholder="Foreign Word" class="w-full px-1 py-1 text-sm border-0 rounded focus:ring-0">
+                </div>
+                <div class="flex-1 px-1 py-1 text-sm sm:text-base sm:mb-0">
+                    <input type="text"id="translated-word" placeholder="Translated Word" class="w-full px-1 py-1 text-sm border-0 rounded focus:ring-0">
+                </div>
+                <div class="flex-1 px-1 py-1 text-sm sm:text-base sm:mb-0">
+                    <input type="text" id="description" placeholder="Description" class="w-full px-1 py-1 text-sm border-0 rounded focus:ring-0">
+                </div>
+                <button class="px-3 py-1 text-sm sm:text-base text-white bg-green-500 rounded-lg hover:bg-green-700 transition duration-300 ease-in-out flex-shrink-0" id="add-word">
+                    Add
+                </button>
             </div>
+            
             <div class="overflow-x-auto">
                 <table class="min-w-full text-sm text-left text-gray-500 dark:text-gray-400">
                     <thead class="text-xs text-gray-700 uppercase bg-gray-50">
@@ -162,14 +178,14 @@
                             <th scope="col" class="px-2 py-2 md:px-6 md:py-3">
                                 Description
                             </th>
-                            <th scope="col" class="px-2 py-2 md:px-6 md:py-3">
+                            <th scope="col" class="px-2 py-2 md:px-6 md:py-3" colspan="2">
                                 Action
                             </th>
                         </tr>
                     </thead>
+
                     <tbody class="text-xs whitespace-nowrap text-black" id="topics-table-body">
                     </tbody>
-                    
                 </table>
             </div>
         </div>
