changed js dictionary

--- a/views/dictionary/index.ejs
+++ b/views/dictionary/index.ejs
@@ -129,65 +129,67 @@
     </aside>
 
     <div class="p-4 sm:ml-64 mt-14">
-        <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-            <!-- <div class="flex flex-col sm:flex-row sm:flex-wrap space-y-4 sm:space-y-0 sm:gap-4 items-center pb-4">
-                <div class="flex flex-col sm:flex-row w-full gap-2">
-                    <input type="text" id="foreign-word"
-                        class="block p-2 text-xs sm:text-sm text-black border border-gray-300 rounded-lg w-full sm:w-80 bg-gray-50"
-                        placeholder="Foreign Word">
-                    <input type="text" id="translated-word"
-                        class="block p-2 text-xs sm:text-sm text-black border border-gray-300 rounded-lg w-full sm:w-80 bg-gray-50"
-                        placeholder="Translated Word">
-                    <textarea id="description"
-                        class="block p-2 text-xs sm:text-sm text-black border border-gray-300 rounded-lg w-full sm:w-80 bg-gray-50"
-                        placeholder="Description"></textarea>
-                </div>
-                <button
-                    class="w-full sm:w-auto px-8 py-2 text-sm sm:text-md text-white bg-green-500 border border-gray-300 rounded-lg hover:bg-green-700 transition duration-300 ease-in-out"
-                    id="add-word">Add</button>
-            </div> -->           
+        <div class="relative overflow-x-auto shadow-md sm:rounded-lg bg-gray-50">  
             
-            <div class="flex flex-wrap items-center bg-gray-100 text-black">
+            <div class="flex flex-wrap items-center text-black p-1 mt-1">
                 <div class="flex-1 px-1 py-1 text-sm sm:text-base sm:mb-0">
-                    <input type="text" id="foreign-word" placeholder="Foreign Word" class="w-full px-1 py-1 text-sm border-0 rounded focus:ring-0">
+                    <input type="text" id="foreign-word" placeholder="Foreign Word" class="w-full px-2 py-2 text-sm border border-gray-300 rounded focus:border-orange-200 focus:ring-0 hover:border-orange-200">
                 </div>
                 <div class="flex-1 px-1 py-1 text-sm sm:text-base sm:mb-0">
-                    <input type="text"id="translated-word" placeholder="Translated Word" class="w-full px-1 py-1 text-sm border-0 rounded focus:ring-0">
+                    <input type="text" id="translated-word" placeholder="Translated Word" class="w-full px-2 py-2 text-sm border border-gray-300 rounded focus:border-orange-200 focus:ring-0 hover:border-orange-200">
                 </div>
-                <div class="flex-1 px-1 py-1 text-sm sm:text-base sm:mb-0">
-                    <input type="text" id="description" placeholder="Description" class="w-full px-1 py-1 text-sm border-0 rounded focus:ring-0">
+                <div class="flex-1 px-2 py-1 text-sm sm:text-base sm:mb-0">
+                    <input type="text" id="description" placeholder="Description" class="w-full px-2 py-2 text-sm border border-gray-300 rounded focus:border-orange-200 focus:ring-0 hover:border-orange-200">
                 </div>
-                <button class="px-3 py-1 text-sm sm:text-base text-white bg-green-500 rounded-lg hover:bg-green-700 transition duration-300 ease-in-out flex-shrink-0" id="add-word">
+                <button class="px-4 py-1 text-sm sm:text-base text-white bg-green-500 rounded-lg hover:bg-green-700 transition duration-300 ease-in-out flex-shrink-0" id="add-word">
                     Add
                 </button>
             </div>
             
-            <div class="overflow-x-auto">
-                <table class="min-w-full text-sm text-left text-gray-500 dark:text-gray-400">
-                    <thead class="text-xs text-gray-700 uppercase bg-gray-50">
-                        <tr>
-                            <th scope="col" class="px-2 py-2 md:px-3 md:py-3">
-                                No.
-                            </th>
-                            <th scope="col" class="px-2 py-2 md:px-6 md:py-3">
-                                Eng
-                            </th>
-                            <th scope="col" class="px-2 py-2 md:px-6 md:py-3">
-                                Aze
-                            </th>
-                            <th scope="col" class="px-2 py-2 md:px-6 md:py-3">
-                                Description
-                            </th>
-                            <th scope="col" class="px-2 py-2 md:px-6 md:py-3" colspan="2">
-                                Action
-                            </th>
-                        </tr>
-                    </thead>
-
-                    <tbody class="text-xs whitespace-nowrap text-black" id="topics-table-body">
-                    </tbody>
-                </table>
+            <div class="container min-w-[340px] p-2 mx-auto sm:p-4 dark:text-gray-800">
+                <div class="overflow-x-auto">
+                    <table class="w-full divide-y text-xs text-gray-900">
+                        <thead>
+                            <tr class="text-start font-bold  border-b border-orange-200">
+                                <th class="px-2 py-3 w-9 border border-orange-200">No.</th>
+                                <th class="px-2 py-3 text-start truncate border border-orange-200">Eng</th>
+                                <th class="px-2 py-3 text-start truncate border border-orange-200">Aze</th>
+                                <th class="px-2 py-3 text-start truncate border border-orange-200">Descrip.</th>
+                                <th class="px-2 py-3 text-start border border-orange-200">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="dictionary-body">
+                        </tbody>
+                    </table>
+                </div>
             </div>
+            
+
+            <!-- <div class="container p-2 mx-auto sm:p-4 dark:text-gray-800">
+
+                <div class="flex flex-col overflow-x-auto text-xs font-bold text-gray-900 bg-gray-50 text-center">
+                    <div class="flex">
+                        <div class="px-2 py-3 w-9 sm:p-3 border border-orange-200 text-center">
+                           No.
+                        </div>
+                        <div class="flex-1 px-2 py-3 sm:p-3 border border-orange-200">
+                            Eng
+                        </div>
+                        <div class="flex-1 px-2 py-3 truncate sm:p-3 border border-orange-200">
+                            Aze
+                        </div>
+                        <div class="flex-1 px-2 py-3 sm:p-3 border border-orange-200">
+                            Descrip.
+                        </div>
+                        <div class="flex-1 px-2 w-10 py-3 sm:p-3 border border-orange-200">
+                            Action
+                        </div>
+                  </div>
+                </div>
+                <div class="flex flex-col overflow-x-auto text-xs  bg-gray-50" id="dictionary-body">
+       
+                </div>
+            </div> -->
         </div>
     </div>
 
